# research-agent

./: .env.example  .gitignore  LICENSE  README.de.md  README.en.md  README.es.md  README.ja.md  README.md  agent.py  main.py  prompts.py  pyproject.toml  requirements.txt  test_offline.py  tools.py
.github/workflows/: ci.yml
